# Lisa-AI-RAG-AGENT-Crew

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.py
assets/: lisa-ai-logo.md
data/: sample.docx  sample.txt  sample_for_docx.txt  sample_for_pdf.txt
db/5ed88fbc-3018-492e-b7bf-2b313f09a6a4/: index_metadata.pickle
src/: __init__.py  crew.py  main.py
src/config/: agents.yaml  models.yaml  tasks.yaml
src/tools/: __init__.py  docx_tool.py  pdf_tool.py  txt_tool.py  utils.py
templates/: report_template.json  report_template_master.json
